hledger/test/errors/ordereddates.j
#!/usr/bin/env -S hledger check ordereddates -f

account a
commodity 1.
payee p

2022/1/2 p
  (a)  1

2022/1/1 p
  (a)  1
